    - Move useless "echo" fork to slave-prep, and include our version
    - Move ntpdate call from unpack-chroot to slave-prep
    - Add preppath to the default config, and add a version 110 upgrade
      stanza to our config file upgrading script to fix upgrades
  * While doing the above, s/Synching/Syncing/ 'cause it drives me nuts

 -- Adam Conrad <adconrad@ubuntu.com>  Sun, 04 Dec 2011 19:29:48 -0700

launchpad-buildd (109) hardy; urgency=low

  * Use sudo when installing qemu into the chroot.
  * Only install qemu into the chroot when building arm* on x86, so armhf
    builds on armel hosts don't try to do it.

 -- William Grant <wgrant@ubuntu.com>  Tue, 29 Nov 2011 22:02:00 +1100

launchpad-buildd (108) hardy; urgency=low

  [ Adam Conrad ]
  * Use the chroot's dpkg-architecture instead of the base system.

  [ Nick Moffitt ]
  * Fixed up sbuild-package and update-debian-chroot to support
    syscall-emulated ARM builds on non-ARM hardware.
  * Added Recommends for qemu-user-static to launchpad-buildd, as the
    package only exists in Universe in natty and later.

 -- William Grant <wgrant@ubuntu.com>  Tue, 29 Nov 2011 19:52:43 +1100

launchpad-buildd (107) hardy; urgency=low

  * Correction to generate-translation-templates for the new file location.

 -- Martin Pool <mbp@canonical.com>  Mon, 21 Nov 2011 16:28:50 +1100

launchpad-buildd (106) hardy; urgency=low

  * Safer parsing in upgrade-config.
  * Get 'make check' working for the split-out tree.

 -- Martin Pool <mbp@canonical.com>  Mon, 21 Nov 2011 12:19:52 +1100

launchpad-buildd (105.1) hardy; urgency=low

  * Add strict version dependency of launchpad-buildd on python-lpbuildd.
  * Add explicit Python dependency for lintian.

 -- Martin Pool <mbp@canonical.com>  Mon, 21 Nov 2011 12:16:34 +1100

launchpad-buildd (105) hardy; urgency=low

  * Remove attempt to run dpkg-query from inside the slave: each state machine
    step can run only a single iteration.
