@@ -1,0 +1,32 @@
+#!/bin/sh
+#
+# Copyright 2009 Canonical Ltd.  This software is licensed under the
+# GNU Affero General Public License version 3 (see the file LICENSE).
+
+# Buildd Slave initial preparation script
+
+export PATH=/usr/bin:/bin:/usr/sbin:/sbin:${PATH}
+
+NTPDATE=ntpdate
+SUDO=sudo
+LPBUILDD=$(dpkg-query -W launchpad-buildd 2>/dev/null | awk '{print $2}')
+PYBUILDD=$(dpkg-query -W python-lpbuildd 2>/dev/null | awk '{print $2}')
+BZRBUILDD=$(dpkg-query -W bzr-builder 2>/dev/null | awk '{print $2}')
+BZR=$(dpkg-query -W bzr 2>/dev/null | awk '{print $2}')
+
+echo "Forking launchpad-buildd slave process..."
+echo -n "Buildd toolchain package versions:"
+[ -z "$LPBUILDD" ] || echo -n " launchpad-buildd_$LPBUILDD"
+[ -z "$PYBUILDD" ] || echo -n " python-lpbuildd_$PYBUILDD"
+[ -z "$BZRBUILDD" ] || echo -n " bzr-builder_$BZRBUILDD"
+[ -z "$BZR" ] || echo -n " bzr_$BZR"
+echo "."
+
+if [ -f /etc/launchpad-buildd/default ]; then
+  eval `grep ntphost /etc/launchpad-buildd/default | sed 's/ //g'`
+fi
+if [ -n "$ntphost" ]; then
+  echo "Syncing the system clock with the buildd NTP service..."
+  $SUDO $NTPDATE -u $ntphost
+fi
+
