@@ -1,23 +1,0 @@
-#!/bin/sh
-#
-# Copyright 2009 Canonical Ltd.  This software is licensed under the
-# GNU Affero General Public License version 3 (see the file LICENSE).
-
-# Buildd Slave initial preparation script
-
-export PATH=/usr/bin:/bin:/usr/sbin:/sbin:${PATH}
-
-NTPDATE=ntpdate
-SUDO=sudo
-BUILDDVERSION=@@VERSION@@
-
-echo "Forking launchpad-buildd (version $BUILDDVERSION) slave process..."
-
-if [ -f /etc/launchpad-buildd/default ]; then
-  eval `grep ntphost /etc/launchpad-buildd/default | sed 's/ //g'`
-fi
-if [ -n "$ntphost" ]; then
-  echo "Syncing the system clock with the buildd NTP service..."
-  $SUDO $NTPDATE -u $ntphost
-fi
-
